--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --display-modules",
-    "start:dev": "webpack-dev-server",
+    "start:dev": "webpack-dev-server --port=8282",
     "build:prod": "webpack --display-modules --mode=production --port=8282",
     "pre-commit": "pip3 install pre-commit && pre-commit install"
   },
