--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --display-modules",
-    "start:dev": "webpack-dev-server --port=8282",
-    "build:prod": "webpack --display-modules --mode=production --port=8282",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --port=8282",
+    "build:prod": "webpack --display-modules --mode=production --host 0.0.0.0 --port=8282",
     "pre-commit": "pip3 install pre-commit && pre-commit install"
   },
   "repository": {
